# CC3S2-PC3-25-2

./: .gitignore  .gitleaks.toml  Makefile  README.md  pyproject.toml  report.md  test.txt  test_metrics_file.py
.github/workflows/: audit.yml  ci.yml  compliance.yml
auditor/: __init__.py  __main__py  cli.py  core.py
auditor/metrics/: __main__.py  metrics.csv  metrics.json  metrics.py  trends.json
auditor/reporting/: md_renderer.py
auditor/rules/: __init__.py  config_rule.py  coverage_rule.py  gitignore_rule.py  license_rule.py  makefile_rule.py  secrets_rule.py
auditor/utils/: fs.py
evidencias/: videos.txt
tests/: conftest.py  test_cli_smoke.py  test_config_rule.py  test_core_runner_errors.py  test_coverage_boundaries.py  test_gitignore_env_fs_mock.py  test_gitignore_env_param.py  test_gitignore_rule.py  test_license_io_error.py  test_makefile_rule.py  test_makefile_targets_param.py  test_rule_coverage_min.py  test_rule_license_present.py  test_rule_secrets_none.py  test_secrest_multifile.py  test_utils.py  tests_publish_to_project.py
tools/: publish_to_project.py  read_coverage.py  render_summary.py
