[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "repo-compliance-auditor"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []


[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["tests/*", ".pytest_cache", "build", "dist"]

[tool.setuptools]
packages = ["auditor"]
